--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@tanstack/react-table": "^8.21.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vapi-ai/web": "^2.3.8",
+    "@vercel/analytics": "^1.5.0",
     "ai": "^5.0.15",
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
@@ -81,7 +83,7 @@
     "graphql": "^16.11.0",
     "https-browserify": "^1.0.0",
     "jszip": "^3.10.1",
-    "lucide-react": "2.15.4",
+    "lucide-react": "0.541.0",
     "next": "15.3.4",
     "next-auth": "5.0.0-beta.29",
     "next-sitemap": "^4.2.3",
